--- a/cafe.html
+++ b/cafe.html
@@ -543,6 +543,8 @@ Error message and password prompt
 
 <li>Отображать тип проекта (LHD-RV) при генерации</li>
 
+<li>ПАК «Звезда» Примеры вызовов функций криптосервиса</li>
+
 <li>Пак Звезда</li>
 
 <li>Подключение по сокету из гостевой машины к хосту</li>
@@ -12349,7 +12351,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210901115720273" creator="zeid" list="[[Криптосервис - php пример]] [[Криптосервис - handshake &amp; login]] [[Тестовые сообщения - receiveMsg и receiveData]] RadioService AppFeedback Home" modified="20210901145420927" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="[[ПАК «Звезда» Примеры вызовов функций криптосервиса]] Home [[Криптосервис - информация]]" modified="20210902110103548" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13174,7 +13176,6 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 </div>
 <div created="20210901120834981" creator="zeid" modified="20210901120911228" modifier="zeid" tags="zdl" title="radio_service.zdl">
 <pre>
-
 ```properties
 # API которое предоставляет криптосервис для получения сообщений от клиентов.
 # Пользователем данного API является подсистема, обеспечивающая коммуникацию с клиентами, зарегистрированными в криптосервисе.
@@ -13482,8 +13483,7 @@ socket_close($socketOut);
 </pre>
 </div>
 <div created="20210901145426593" creator="zeid" modified="20210901145515444" modifier="zeid" tags="php handshake Криптосервис" title="Криптосервис - php пример">
-<pre>
-```php
+<pre>```php
 &lt;?php 
 ini_set('display_errors', '1');
 ini_set('display_startup_errors', '1');
@@ -13880,6 +13880,136 @@ PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : 
 </div>
 <div created="20210603092730831" modified="20210603095222158" tags="" title="Отображать тип проекта (LHD-RV) при генерации">
 <pre>Отображение типа проекта (LHD-RV/LHD) при замене старого существующего проекта при генерации из .lhd-файла</pre>
+</div>
+<div created="20210902110111815" creator="zeid" modified="20210902111909564" modifier="zeid" tags="Криптосервис info" title="ПАК «Звезда» Примеры вызовов функций криптосервиса">
+<pre>Теоретическая база
+Состав ПАК «Звезда»:
+
+# микросхема, интегрируемая в конечное устройство (далее по тексту - ЭБ).
+# криптосервис.
+# модуль безопасности криптосервиса (далее по тексту ЭБКС).
+Все остальные компоненты находятся вне зоны ответственности ПАК «Звезда» и реализуются заказчиками и партнёрами.
+
+Существует две заинтересованных стороны взаимодействия: 
+
+# конечное устройство (далее по тексту – клиент).
+# сервер приложений. 
+
+Клиент состоит из:
+
+# контроллера (должен поддерживать протокол); 
+# передатчика (передаёт сообщение в сеть);
+# ЭБ (осуществляет шифрование и расшифрование).
+
+Сервер приложений – некоторое стороннее ПО заказчика или партнёра, которое обрабатывает сообщения от клиента на логическом уровне и которое пользуется услугами криптосервиса по шифрованию, расшифрованию сообщений и администрированию клиентов.
+
+Зашифрованные сообщения далее по тексту могут называться CRISP-сообщения.
+
+Интерфейсы, предназначенные для обращения к криптосервису, называются AppService API и RadioService API. 
+Интерфейсы, предназначенные для обращения криптосервиса к внешним сущностям, называются RadioFeedback API и AppFeedback API.
+
+Общая схема положения всех участвующих элементов следующая:
+
+
+
+
+
+Синим цветом обозначены элементы вне зоны ответственности ПАК «Звезда». Зелёным цветом обозначены элементы ПАК «Звезда», за которые отвечает НИИМЭ.
+
+Существует два типа сообщений:
+с подтверждением;
+без подтверждения.
+Сообщения с подтверждением требуют некоторых дополнительных сообщений установки и закрытия сессии. Этот процесс управляется криптосервисом и контроллером на стороне клиента.
+
+Сценарий отправки сообщения от сервера приложений клиенту:
+сервер приложений вызывает функцию SendData (или PostData) в AppService API криптосервиса и передаёт данные в открытом виде;
+криптосервис выполняет внутреннюю логику;
+криптосервис вызывает функцию SendMsg в RadioFeedback API транспортного прокси и передаёт ему зашифрованные данные;
+транспортный прокси передаёт сообщение клиенту;
+клиент передаёт сообщение ЭБ;
+клиент получает расшифрованное сообщение и выполняет свою бизнес-логику.
+
+Сценарий отправки сообщения от клиента серверу приложений:
+клиент формирует сообщение в открытом виде и направляет его ЭБ;
+клиент получает зашифрованное сообщение и передаёт в канал связи;
+транспортный прокси получает сообщение;
+транспортный прокси вызывает функцию ReceiveMsg в RadioService API криптосервиса и передаёт зашифрованное сообщение криптосервису;
+криптосервис выполняет свою внутреннюю логику;
+криптосервис вызывает функцию ReceiveData в AppFeedback API сервера приложений и передаёт расшифрованные данные.
+
+Далее по тексту будет представлен RPC-лог вызовов функций API. Лог пишется от лица криптосервиса. Формат сообщений следующий:
+&lt;направление сообщения и имя API&gt;
+RawPkg:   &lt;RPC Header&gt; |  &lt;RPC Message&gt;
+Type:     &lt;A&gt; (&lt;тип сообщения&gt;)
+MsgId:    &lt;B&gt; (идентификатор сообщения)
+FuncId:   &lt;C&gt; (&lt;имя функции&gt;)
+где RawPkg – набор сырых байт, который передаётся по сокетам, RpcHeader – заголовок, который описан в документации по RPC (doc/utils/rpc/RPC Technology.docx, Глава 4), RpcMessage – сериализованное сообщение, формат описан в документации по RPC, Type, MsgId, FuncId – парсинг заголовка для более понятного восприятия сообщений.
+
+Некоторые сообщения будут содержать CRISP-сообщения
+RawPkg:   &lt;RPC Header&gt;  | &lt;RPC Message&gt;
+Type:      1 (Function Call)
+MsgId:     &lt;B&gt;
+FuncId:    &lt;C&gt; (&lt;имя функции&gt;)
+CrispInfo:
+ClientID:     &lt;D&gt; (идентификатор клиента)
+            ServSeqNum:   &lt;E&gt; (счётчик сообщений сервера)
+            ClientSeqNum: &lt;F&gt; (счётчик сообщений клиента)
+            PS:           &lt;G&gt; (информационный байт)
+
+
+App Service API: Send Data
+Отправка сообщения без подтверждения от сервера приложений клиенту.
+Сервер приложений отправляет запрос криптосервису на отправку данных («123», ASCII) без подтверждения клиенту с ClientID = 1 через функцию SendData из AppService API.
+
+Receiving package of API AppService
+RawPkg:    00 01 00 03 00 02 00 00 00 0C  |  93 CE 00 00 00 01 C4 03 31 32 33 C2
+Type:      1 (Function Call)
+        MsgId:     3
+        FuncId:    2 (SendData)
+
+Криптосервис вызывает функцию SendMsg у транспортного прокси через RadioFeedback API и передаёт ему зашифрованное сообщение.
+
+Sending package of API RadioFeedback
+RawPkg:    00 01 00 04 00 01 00 00 00 1F  |  92 CE 00 00 00 01 C4 17 00 00 82 85       
+           01 00 00 00 01 00 00 04 00 00 02 00 31 32 33 02 3D 59 9C
+Type:      1 (Function Call)
+MsgId:     4
+FuncId:    1 (SendMsg)
+CrispInfo:
+ClientID:     00000001
+ServSeqNum:   000004
+ClientSeqNum: 000002
+PS:           00 ( от сервера )
+
+
+
+
+Radio Service API: Receive Msg
+Отправка сообщения без подтверждения от клиента серверу приложений.
+Транспортный прокси принимает сообщение («123», ASCII) от клиента с 
+ClientID = 1 из канала связи и передаёт на обработку криптосервису через функцию ReceiveMsg из RadioService API.
+
+Receiving package of API RadioService
+RawPkg:    00 01 00 03 00 01 00 00 00 1A  |  91 C4 17 00 00 81 85 01 00 00 00 01 
+           00 00 04 00 00 03 80 F9 BC 37 4D D0 56 62
+Type:      1 (Function Call)
+      MsgId:     3
+      FuncId:    1 (ReceiveMsg)
+      CrispInfo:
+      	ClientID:     00000001
+            ServSeqNum:   000004
+            ClientSeqNum: 000003
+            PS:           80 ( от клиента )
+
+Криптосервис расшифровывает сообщение и отправляет данные серверу приложений через функцию ReceiveData из AppFeedaback API.
+
+Sending package of API AppFeedback
+RawPkg:    00 01 00 02 00 01 00 00 00 19  |  96 CE 00 00 00 01 C4 03 31 32 33 CE  
+           00 00 00 54 C4 00 CE 00 00 00 DA C4 00
+Type:      1 (Function Call)
+        MsgId:     2
+        FuncId:    1 (ReceiveData)
+</pre>
 </div>
 <div created="20210826160041292" modified="20210826160908540" tags="projects" title="Пак Звезда">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
