--- a/cafe.html
+++ b/cafe.html
@@ -12360,7 +12360,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="$:/Import [[ПАК «Звезда» Примеры вызовов функций криптосервиса]] Home [[Криптосервис - информация]]" modified="20210902110103548" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="$:/Import [[ПАК «Звезда» Примеры вызовов функций криптосервиса]] Home [[Криптосервис - информация]]" modified="20210902112034956" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13893,7 +13893,7 @@ PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : 
 <div created="20210603092730831" modified="20210603095222158" tags="" title="Отображать тип проекта (LHD-RV) при генерации">
 <pre>Отображение типа проекта (LHD-RV/LHD) при замене старого существующего проекта при генерации из .lhd-файла</pre>
 </div>
-<div created="20210902110111815" creator="zeid" modified="20210902111909564" modifier="zeid" tags="Криптосервис info" title="ПАК «Звезда» Примеры вызовов функций криптосервиса">
+<div created="20210902110111815" creator="zeid" modified="20210902112147640" modifier="zeid" tags="Криптосервис info" title="ПАК «Звезда» Примеры вызовов функций криптосервиса">
 <pre>Теоретическая база
 Состав ПАК «Звезда»:
 
@@ -13917,12 +13917,12 @@ PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : 
 
 Зашифрованные сообщения далее по тексту могут называться CRISP-сообщения.
 
-Интерфейсы, предназначенные для обращения к криптосервису, называются AppService API и RadioService API. 
-Интерфейсы, предназначенные для обращения криптосервиса к внешним сущностям, называются RadioFeedback API и AppFeedback API.
+* Интерфейсы, предназначенные для обращения к криптосервису, называются AppService API и RadioService API. 
+* Интерфейсы, предназначенные для обращения криптосервиса к внешним сущностям, называются RadioFeedback API и AppFeedback API.
 
 Общая схема положения всех участвующих элементов следующая:
 
-
+{{criptoservice.png}}
 
 
 
